kube_configs/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bio-node
  labels:
    name: bio-node
