kube_configs/db.yml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: db-disk
            readOnly: false
      terminationGracePeriodSeconds: 5
      priorityClassName: highest-priority
      containers:
        - name: postgres
          image: postgres:11-alpine
          volumeMounts:
            - name: volume
              mountPath: /var/lib/postgresql/data
              subPath: data
