kube_configs/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      volumes:
        - name: html
          emptyDir: {}
        - name: docker-volume
          hostPath:
            # directory location on host
            path: /var/run/docker.sock
        - name: nginx-proxy-config
          configMap:
            name: proxy-nginx-conf
        - name: nfs
          persistentVolumeClaim:
            claimName: default-pvc
            readOnly: false
      terminationGracePeriodSeconds: 5
      containers:
        - name: django
          image: gcr.io/poised-cortex-254814/webservice-server:latest
          imagePullPolicy: "Always"
          volumeMounts:
            - name: docker-volume
              mountPath: /var/run/docker.sock
            - name: nfs
              mountPath: /volume
            - name: html
              mountPath: /var/www
        - name: nginx
          image: yspreen/nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-proxy-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: html
              mountPath: /var/www
            - name: nfs
              mountPath: /volume
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
  labels:
    app: server
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"443" :"backend-config","80" :"backend-config"}}'
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: server
  type: NodePort
